--- a/about.html
+++ b/about.html
@@ -60,12 +60,7 @@ https://www.tooplate.com/view/2127-little-fashion
           <a class="navbar-brand" href="index.html">
             <strong><span>BGR</span> Construction</strong>
           </a>
-
-          <div class="d-lg-none">
-            <a href="#" class="bi-person custom-icon me-3"></a>
-
-            <a href="#" class="bi-bag custom-icon"></a>
-          </div>
+          <div></div>
 
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
@@ -92,8 +87,9 @@ https://www.tooplate.com/view/2127-little-fashion
       <header class="site-header section-padding-img site-header-image">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 col-12 header-info">
+            <div class="col-lg-6 col-12 header-info about-header-text">
               <h1>
+                <span class="d-block text-dark">Get to know</span>
                 <span class="d-block text-primary">BGR</span>
                 <span class="d-block text-dark">Construction</span>
               </h1>
