--- a/home3.html
+++ b/home3.html
@@ -59,12 +59,7 @@ https://www.tooplate.com/view/2127-little-fashion
           <a class="navbar-brand" href="index.html">
             <strong><span>BGR</span> Construction</strong>
           </a>
-
-          <div class="d-lg-none">
-            <a href="#" class="bi-person custom-icon me-3"></a>
-
-            <a href="#" class="bi-bag custom-icon"></a>
-          </div>
+          <div></div>
 
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
@@ -144,7 +139,11 @@ https://www.tooplate.com/view/2127-little-fashion
             </div>
 
             <div class="product-thumb thumbnail-wrapper">
-              <img src="./images/Alred Home/Hyrum-3.jpg" class="img-fluid product-image" alt="" />
+              <img
+                src="./images/Alred Home/bookshelf-view.jpg"
+                class="img-fluid product-image"
+                alt=""
+              />
             </div>
           </div>
         </div>
