--- a/products.html
+++ b/products.html
@@ -59,12 +59,7 @@ https://www.tooplate.com/view/2127-little-fashion
           <a class="navbar-brand" href="index.html">
             <strong><span>BGR</span> Construction</strong>
           </a>
-
-          <div class="d-lg-none">
-            <a href="#" class="bi-person custom-icon me-3"></a>
-
-            <a href="#" class="bi-bag custom-icon"></a>
-          </div>
+          <div></div>
 
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
@@ -109,42 +104,6 @@ https://www.tooplate.com/view/2127-little-fashion
 
             <div class="col-lg-4 col-12 mb-3">
               <div class="product-thumb">
-                <a href="home1.html">
-                  <img src="images/Alley/front.jpg" class="img-fluid product-image" alt="" />
-                </a>
-
-                <div class="product-info d-flex">
-                  <div>
-                    <h5 class="product-title mb-0">
-                      <a href="home1.html" class="product-title-link">Hyde Park, UT</a>
-                    </h5>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-12 mb-3">
-              <div class="product-thumb">
-                <a href="home2.html">
-                  <img
-                    src="images/2023 parade home/front-view.jpg"
-                    class="img-fluid product-image"
-                    alt=""
-                  />
-                </a>
-
-                <div class="product-info d-flex">
-                  <div>
-                    <h5 class="product-title mb-0">
-                      <a href="home2.html" class="product-title-link">Hyde Park, UT</a>
-                    </h5>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-12 mb-3">
-              <div class="product-thumb">
                 <a href="home3.html">
                   <img
                     src="images/Alred Home/font-view.jpg"
@@ -185,6 +144,26 @@ https://www.tooplate.com/view/2127-little-fashion
 
             <div class="col-lg-4 col-12 mb-3">
               <div class="product-thumb">
+                <a href="home2.html">
+                  <img
+                    src="images/2023 parade home/front-view.jpg"
+                    class="img-fluid product-image"
+                    alt=""
+                  />
+                </a>
+
+                <div class="product-info d-flex">
+                  <div>
+                    <h5 class="product-title mb-0">
+                      <a href="home2.html" class="product-title-link">Hyde Park, UT</a>
+                    </h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-12 mb-3">
+              <div class="product-thumb">
                 <a href="home5.html">
                   <img
                     src="images/Scadden Home/front-home-view.jpg"
@@ -197,6 +176,22 @@ https://www.tooplate.com/view/2127-little-fashion
                   <div>
                     <h5 class="product-title mb-0">
                       <a href="home5.html" class="product-title-link">Hyde Park, UT</a>
+                    </h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-12 mb-3">
+              <div class="product-thumb">
+                <a href="home1.html">
+                  <img src="images/Alley/front.jpg" class="img-fluid product-image" alt="" />
+                </a>
+
+                <div class="product-info d-flex">
+                  <div>
+                    <h5 class="product-title mb-0">
+                      <a href="home1.html" class="product-title-link">Hyde Park, UT</a>
                     </h5>
                   </div>
                 </div>
