--- a/home4.html
+++ b/home4.html
@@ -59,12 +59,7 @@ https://www.tooplate.com/view/2127-little-fashion
           <a class="navbar-brand" href="index.html">
             <strong><span>BGR</span> Construction</strong>
           </a>
-
-          <div class="d-lg-none">
-            <a href="#" class="bi-person custom-icon me-3"></a>
-
-            <a href="#" class="bi-bag custom-icon"></a>
-          </div>
+          <div></div>
 
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
