--- a/index.html
+++ b/index.html
@@ -53,12 +53,7 @@
             <strong><span>BGR</span> Construction</strong>
           </a>
 
-          <div class="d-lg-none">
-            <a href="#" class="bi-person custom-icon me-3"></a>
-
-            <a href="#" class="bi-bag custom-icon"></a>
-          </div>
-
+          <div></div>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
@@ -83,13 +78,13 @@
 
       <section class="slick-slideshow">
         <div class="slick-custom">
-          <img src="images/dozer-pushing.jpeg" class="img-fluid" alt="" />
+          <img src="images/dozer-pushing-resized.jpg" class="img-fluid" alt="" />
 
           <div class="slick-bottom">
             <div class="container">
               <div class="row">
                 <div class="col-lg-6 col-10">
-                  <h1 class="slick-title">Land Development</h1>
+                  <h1 class="slick-title">Development</h1>
 
                   <p class="lead text-white mt-lg-3 mb-lg-5">
                     Our dedicated team combines decades of experience with state-of-the-art
@@ -103,7 +98,7 @@
         </div>
 
         <div class="slick-custom">
-          <img src="images/juniper-lot-7.jpeg" class="img-fluid" alt="" />
+          <img src="images/2023 parade home/front-view.jpg" class="img-fluid" alt="" />
 
           <div class="slick-bottom">
             <div class="container">
@@ -389,14 +384,18 @@
 
             <div class="col-lg-4 col-12 mb-3">
               <div class="product-thumb">
-                <a href="home1.html">
-                  <img src="images/Alley/front.jpg" class="img-fluid product-image" alt="" />
+                <a href="home4.html">
+                  <img
+                    src="images/Mumford Home/front-view.jpg"
+                    class="img-fluid product-image"
+                    alt=""
+                  />
                 </a>
 
                 <div class="product-info d-flex">
                   <div>
                     <h5 class="product-title mb-0">
-                      <a href="home1.html" class="product-title-link">Hyde Park</a>
+                      <a href="home4.html" class="product-title-link">Hyde Park</a>
                     </h5>
 
                     <!-- <p class="product-p">These guys were bad clients</p> -->
@@ -407,14 +406,14 @@
 
             <div class="col-lg-4 col-12 mb-3">
               <div class="product-thumb">
-                <a href="home2.html">
+                <a href="home3.html">
                   <img src="images/Alred Home/front.jpg" class="img-fluid product-image" alt="" />
                 </a>
 
                 <div class="product-info d-flex">
                   <div>
                     <h5 class="product-title mb-0">
-                      <a href="home2.html" class="product-title-link">Hyrum</a>
+                      <a href="home3.html" class="product-title-link">Hyrum</a>
                     </h5>
 
                     <!-- <p class="product-p">Come Buy this thing! its sick!</p> -->
@@ -425,7 +424,7 @@
 
             <div class="col-lg-4 col-12">
               <div class="product-thumb">
-                <a href="home3.html">
+                <a href="home2.html">
                   <img
                     src="images/2023 parade home/front-view.jpg"
                     class="img-fluid product-image"
@@ -436,7 +435,7 @@
                 <div class="product-info d-flex">
                   <div>
                     <h5 class="product-title mb-0">
-                      <a href="home3.html" class="product-title-link">Hyde Park</a>
+                      <a href="home2.html" class="product-title-link">Hyde Park</a>
                     </h5>
 
                     <!-- <p class="product-p">Nature made another world</p> -->
