--- a/site-template/contact.html
+++ b/site-template/contact.html
@@ -60,7 +60,7 @@ https://www.tooplate.com/view/2127-little-fashion
           <a class="navbar-brand" href="index.html">
             <strong><span>BGR</span> Construction</strong>
           </a>
-
+          <div></div>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
