--- a/site-template/index.html
+++ b/site-template/index.html
@@ -52,6 +52,8 @@
           <a class="navbar-brand" href="index.html">
             <strong><span>BGR</span> Construction</strong>
           </a>
+
+          <div></div>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
