update home description

--- a/site-template/home2.html
+++ b/site-template/home2.html
@@ -114,6 +114,14 @@ https://www.tooplate.com/view/2127-little-fashion
                   <h2 class="product-title mb-0">Hyde Park, Utah</h2>
                 </div>
               </div>
+
+              <div class="product-description">
+                <p class="lead mb-5"
+                  >This house Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga
+                  voluptatem alias architecto aliquid nesciunt. Mollitia, modi praesentium? Hic modi
+                  numquam sunt, nesciunt fugiat molestiae assumenda ab esse qui. Cum, molestiae!</p
+                >
+              </div>
             </div>
           </div>
 
