--- a/about.html
+++ b/about.html
@@ -97,7 +97,11 @@ https://www.tooplate.com/view/2127-little-fashion
           </div>
         </div>
 
-        <img src="images/family.png" class="header-image img-fluid family" alt="" />
+        <img
+          src="https://res.cloudinary.com/bfrest/image/upload/v1723383825/family-resized.png"
+          class="header-image img-fluid family"
+          alt=""
+        />
       </header>
 
       <section class="section-padding">
@@ -126,23 +130,6 @@ https://www.tooplate.com/view/2127-little-fashion
               >
 
               <div class="slick-testimonial">
-                <div class="slick-testimonial-caption">
-                  <p class="lead"
-                    >Over three years in business, We’ve had the chance to work on a variety of
-                    projects, with companies Lorem ipsum dolor sit amet</p
-                  >
-
-                  <div class="slick-testimonial-client d-flex align-items-center mt-4">
-                    <img
-                      src="images/people/senior-man-wearing-white-face-mask-covid-19-campaign-with-design-space.jpeg"
-                      class="img-fluid custom-circle-image me-3"
-                      alt=""
-                    />
-
-                    <span>George, <strong class="text-muted">Digital Art Fashion</strong></span>
-                  </div>
-                </div>
-
                 <div class="slick-testimonial-caption">
                   <p class="lead"
                     >Hats off to BGR for transforming our land into a masterpiece! Their team not
