--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,11 @@ https://www.tooplate.com/view/2127-little-fashion
           </div>
         </div>
 
-        <img src="images/Alley/table.jpg" class="header-image img-fluid" alt="" />
+        <img
+          src="https://res.cloudinary.com/bfrest/image/upload/v1723383523/BGR/table.jpg"
+          class="header-image img-fluid"
+          alt=""
+        />
       </header>
 
       <section class="contact section-padding">
