--- a/home1.html
+++ b/home1.html
@@ -123,19 +123,35 @@ https://www.tooplate.com/view/2127-little-fashion
 
           <div class="home-image-grid">
             <div class="product-thumb thumbnail-wrapper">
-              <img src="images/Alley/fireplace.jpg" class="img-fluid product-image" alt="" />
+              <img
+                src="https://res.cloudinary.com/bfrest/image/upload/v1723381445/BGR/fireplace.jpg"
+                class="img-fluid product-image"
+                alt=""
+              />
             </div>
 
             <div class="product-thumb thumbnail-wrapper">
-              <img src="images/Alley/front-room.jpg" class="img-fluid product-image" alt="" />
+              <img
+                src="https://res.cloudinary.com/bfrest/image/upload/v1723381447/BGR/front-room.jpg"
+                class="img-fluid product-image"
+                alt=""
+              />
             </div>
 
             <div class="product-thumb thumbnail-wrapper">
-              <img src="images/Alley/kitchen.jpg" class="img-fluid product-image" alt="" />
+              <img
+                src="https://res.cloudinary.com/bfrest/image/upload/v1723381474/BGR/kitchen.jpg"
+                class="img-fluid product-image"
+                alt=""
+              />
             </div>
 
             <div class="product-thumb thumbnail-wrapper">
-              <img src="images/Alley/vanity.jpg" class="img-fluid product-image" alt="" />
+              <img
+                src="https://res.cloudinary.com/bfrest/image/upload/v1723381520/BGR/vanity.jpg"
+                class="img-fluid product-image"
+                alt=""
+              />
             </div>
           </div>
         </div>
