--- a/home3.html
+++ b/home3.html
@@ -101,7 +101,7 @@ https://www.tooplate.com/view/2127-little-fashion
             <div class="col-lg-6 col-12">
               <div class="product-thumb">
                 <img
-                  src="./images/Alred Home/font-view.jpg"
+                  src="https://res.cloudinary.com/bfrest/image/upload/v1723380812/BGR/alred-font-view.jpg"
                   class="img-fluid product-image"
                   alt=""
                 />
@@ -128,19 +128,23 @@ https://www.tooplate.com/view/2127-little-fashion
           <div class="home-image-grid">
             <div class="product-thumb thumbnail-wrapper">
               <img
-                src="./images/Alred Home/office-piano.jpg"
+                src="https://res.cloudinary.com/bfrest/image/upload/v1723381303/BGR/office-piano.jpg"
                 class="img-fluid product-image"
                 alt=""
               />
             </div>
 
             <div class="product-thumb thumbnail-wrapper">
-              <img src="./images/Alred Home/entry.jpg" class="img-fluid product-image" alt="" />
+              <img
+                src="https://res.cloudinary.com/bfrest/image/upload/v1723380558/BGR/entry.jpgg"
+                class="img-fluid product-image"
+                alt=""
+              />
             </div>
 
             <div class="product-thumb thumbnail-wrapper">
               <img
-                src="./images/Alred Home/bookshelf-view.jpg"
+                src="https://res.cloudinary.com/bfrest/image/upload/v1723381303/BGR/bookshelf-view.jpg"
                 class="img-fluid product-image"
                 alt=""
               />
