--- a/home4.html
+++ b/home4.html
@@ -101,7 +101,7 @@ https://www.tooplate.com/view/2127-little-fashion
             <div class="col-lg-6 col-12">
               <div class="product-thumb">
                 <img
-                  src="./images/Mumford Home/front-view.jpg"
+                  src="https://res.cloudinary.com/bfrest/image/upload/v1723380681/BGR/mumford-front-view.jpg"
                   class="img-fluid product-image"
                   alt=""
                 />
@@ -128,7 +128,7 @@ https://www.tooplate.com/view/2127-little-fashion
           <div class="home-image-grid">
             <div class="product-thumb thumbnail-wrapper">
               <img
-                src="./images/Alred Home/office-piano.jpg"
+                src="https://res.cloudinary.com/bfrest/image/upload/v1723381199/BGR/entrance.jpg"
                 class="img-fluid product-image"
                 alt=""
               />
@@ -136,7 +136,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
             <div class="product-thumb thumbnail-wrapper">
               <img
-                src="./images/Mumford Home/entrance.jpg"
+                src="https://res.cloudinary.com/bfrest/image/upload/v1723381198/BGR/fireplace-front-room.jpg"
                 class="img-fluid product-image"
                 alt=""
               />
@@ -144,15 +144,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
             <div class="product-thumb thumbnail-wrapper">
               <img
-                src="./images/Mumford Home/fireplace-front-room.jpg"
-                class="img-fluid product-image"
-                alt=""
-              />
-            </div>
-
-            <div class="product-thumb thumbnail-wrapper">
-              <img
-                src="./images/Mumford Home/kitchen-view.jpg"
+                src="https://res.cloudinary.com/bfrest/image/upload/v1723381200/BGR/kitchen-view.jpg"
                 class="img-fluid product-image"
                 alt=""
               />
