--- a/home5.html
+++ b/home5.html
@@ -101,7 +101,7 @@ https://www.tooplate.com/view/2127-little-fashion
             <div class="col-lg-6 col-12">
               <div class="product-thumb">
                 <img
-                  src="./images/Scadden Home/front-home-view.jpg"
+                  src="https://res.cloudinary.com/bfrest/image/upload/v1723380877/BGR/Scadden_front_view.jpg"
                   class="img-fluid product-image"
                   alt=""
                 />
@@ -128,7 +128,7 @@ https://www.tooplate.com/view/2127-little-fashion
           <div class="home-image-grid">
             <div class="product-thumb thumbnail-wrapper">
               <img
-                src="./images/Scadden Home/island-view.jpg"
+                src="https://res.cloudinary.com/bfrest/image/upload/v1723380997/BGR/island-view.jpg"
                 class="img-fluid product-image"
                 alt=""
               />
@@ -136,7 +136,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
             <div class="product-thumb thumbnail-wrapper">
               <img
-                src="./images/Scadden Home/master-bedroom.jpg"
+                src="https://res.cloudinary.com/bfrest/image/upload/v1723380999/BGR/master-bedroom.jpg"
                 class="img-fluid product-image"
                 alt=""
               />
@@ -144,7 +144,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
             <div class="product-thumb thumbnail-wrapper">
               <img
-                src="./images/Scadden Home/kitchen-wide-view.jpg"
+                src="https://res.cloudinary.com/bfrest/image/upload/v1723380999/BGR/kitchen-wide-view.jpg"
                 class="img-fluid product-image"
                 alt=""
               />
@@ -152,7 +152,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
             <div class="product-thumb thumbnail-wrapper">
               <img
-                src="./images/Scadden Home/cabinets.jpg"
+                src="https://res.cloudinary.com/bfrest/image/upload/v1723380996/BGR/cabinets.jpg"
                 class="img-fluid product-image"
                 alt=""
               />
