--- a/home2.html
+++ b/home2.html
@@ -101,7 +101,7 @@ https://www.tooplate.com/view/2127-little-fashion
             <div class="col-lg-6 col-12">
               <div class="product-thumb">
                 <img
-                  src="./images/2023 parade home/front-view.jpg"
+                  src="https://res.cloudinary.com/bfrest/image/upload/v1723380426/BGR/front-view.jpg"
                   class="img-fluid product-image"
                   alt=""
                 />
@@ -128,7 +128,7 @@ https://www.tooplate.com/view/2127-little-fashion
           <div class="home-image-grid">
             <div class="product-thumb thumbnail-wrapper">
               <img
-                src="./images/2023 parade home/fireplace-living-room.jpg"
+                src="https://res.cloudinary.com/bfrest/image/upload/v1723381391/BGR/fireplace-living-room.jpg"
                 class="img-fluid product-image"
                 alt=""
               />
@@ -136,7 +136,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
             <div class="product-thumb thumbnail-wrapper">
               <img
-                src="./images/2023 parade home/kitchen-main-living-room.jpg"
+                src="https://res.cloudinary.com/bfrest/image/upload/v1723381392/BGR/kitchen-main-living-room.jpg"
                 class="img-fluid product-image"
                 alt=""
               />
@@ -144,7 +144,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
             <div class="product-thumb thumbnail-wrapper">
               <img
-                src="./images/2023 parade home/master-bathroom.jpg"
+                src="https://res.cloudinary.com/bfrest/image/upload/v1723381393/BGR/master-bathroom.jpg"
                 class="img-fluid product-image"
                 alt=""
               />
