--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
 
       <section class="slick-slideshow">
         <div class="slick-custom">
-          <img src="images/dozer-pushing-resized.jpg" class="img-fluid" alt="" />
+          <img
+            src="https://res.cloudinary.com/bfrest/image/upload/v1723380293/BGR/dozer-pushing.jpg"
+            class="img-fluid"
+            alt=""
+          />
 
           <div class="slick-bottom">
             <div class="container">
@@ -98,7 +102,11 @@
         </div>
 
         <div class="slick-custom">
-          <img src="images/2023 parade home/front-view.jpg" class="img-fluid" alt="" />
+          <img
+            src="https://res.cloudinary.com/bfrest/image/upload/v1723380426/BGR/front-view.jpg"
+            class="img-fluid"
+            alt=""
+          />
 
           <div class="slick-bottom">
             <div class="container">
@@ -119,7 +127,11 @@
         </div>
 
         <div class="slick-custom">
-          <img src="images/Alley/vannity-view.jpg" class="img-fluid" alt="" />
+          <img
+            src="https://res.cloudinary.com/bfrest/image/upload/v1723380449/BGR/vannity-view.jpg"
+            class="img-fluid"
+            alt=""
+          />
 
           <div class="slick-bottom">
             <div class="container">
@@ -211,7 +223,7 @@
                       style="height: 300px; width: 400px; overflow: hidden"
                     >
                       <img
-                        src="images/2023 parade home/main-accent-wall.jpg"
+                        src="https://res.cloudinary.com/bfrest/image/upload/v1723380482/BGR/main-accent-wall.jpg"
                         class="img-fluid"
                         alt=""
                       />
@@ -250,7 +262,7 @@
                       style="height: 300px; width: 400px; overflow: hidden"
                     >
                       <img
-                        src="images/2023 parade home/master-shower.jpg"
+                        src="https://res.cloudinary.com/bfrest/image/upload/v1723380521/BGR/master-shower.jpg"
                         class="img-fluid"
                         alt=""
                       />
@@ -285,7 +297,11 @@
                 >
                   <div class="row">
                     <div class="col-lg-7 col-12" style="height: 300px; width: 400px">
-                      <img src="images/Alred Home/entry.jpg" class="img-fluid" alt="" />
+                      <img
+                        src="https://res.cloudinary.com/bfrest/image/upload/v1723380558/BGR/entry.jpg"
+                        class="img-fluid"
+                        alt=""
+                      />
                     </div>
 
                     <div class="col-lg-5 col-12">
@@ -386,7 +402,7 @@
               <div class="product-thumb">
                 <a href="home4.html">
                   <img
-                    src="images/Mumford Home/front-view.jpg"
+                    src="https://res.cloudinary.com/bfrest/image/upload/v1723380681/BGR/mumford-front-view.jpg"
                     class="img-fluid product-image"
                     alt=""
                   />
@@ -407,7 +423,11 @@
             <div class="col-lg-4 col-12 mb-3">
               <div class="product-thumb">
                 <a href="home3.html">
-                  <img src="images/Alred Home/front.jpg" class="img-fluid product-image" alt="" />
+                  <img
+                    src="https://res.cloudinary.com/bfrest/image/upload/v1723380717/BGR/front.jpg"
+                    class="img-fluid product-image"
+                    alt=""
+                  />
                 </a>
 
                 <div class="product-info d-flex">
@@ -426,7 +446,7 @@
               <div class="product-thumb">
                 <a href="home2.html">
                   <img
-                    src="images/2023 parade home/front-view.jpg"
+                    src="https://res.cloudinary.com/bfrest/image/upload/v1723380426/BGR/front-view.jpg"
                     class="img-fluid product-image"
                     alt=""
                   />
