--- a/products.html
+++ b/products.html
@@ -106,7 +106,7 @@ https://www.tooplate.com/view/2127-little-fashion
               <div class="product-thumb">
                 <a href="home3.html">
                   <img
-                    src="images/Alred Home/font-view.jpg"
+                    src="https://res.cloudinary.com/bfrest/image/upload/v1723380812/BGR/alred-font-view.jpg"
                     class="img-fluid product-image"
                     alt=""
                   />
@@ -126,7 +126,7 @@ https://www.tooplate.com/view/2127-little-fashion
               <div class="product-thumb">
                 <a href="home4.html">
                   <img
-                    src="images/Mumford Home/front-view.jpg"
+                    src="https://res.cloudinary.com/bfrest/image/upload/v1723380681/BGR/mumford-front-view.jpg"
                     class="img-fluid product-image"
                     alt=""
                   />
@@ -146,7 +146,7 @@ https://www.tooplate.com/view/2127-little-fashion
               <div class="product-thumb">
                 <a href="home2.html">
                   <img
-                    src="images/2023 parade home/front-view.jpg"
+                    src="https://res.cloudinary.com/bfrest/image/upload/v1723380426/BGR/front-view.jpg"
                     class="img-fluid product-image"
                     alt=""
                   />
@@ -166,7 +166,7 @@ https://www.tooplate.com/view/2127-little-fashion
               <div class="product-thumb">
                 <a href="home5.html">
                   <img
-                    src="images/Scadden Home/front-home-view.jpg"
+                    src="https://res.cloudinary.com/bfrest/image/upload/v1723380877/BGR/Scadden_front_view.jpg"
                     class="img-fluid product-image"
                     alt=""
                   />
@@ -182,7 +182,7 @@ https://www.tooplate.com/view/2127-little-fashion
               </div>
             </div>
 
-            <div class="col-lg-4 col-12 mb-3">
+            <!-- <div class="col-lg-4 col-12 mb-3">
               <div class="product-thumb">
                 <a href="home1.html">
                   <img src="images/Alley/front.jpg" class="img-fluid product-image" alt="" />
@@ -196,7 +196,7 @@ https://www.tooplate.com/view/2127-little-fashion
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
